[gd_scene load_steps=60 format=3 uid="uid://cwq13yg300t1c"]

[ext_resource type="PackedScene" uid="uid://crg3q6ycx62qw" path="res://Player.tscn" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="1_62w1g"]
[ext_resource type="PackedScene" uid="uid://cvslo15vi3gtq" path="res://Level.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bss8o32q8qdwx" path="res://icon.png" id="3"]
[ext_resource type="PackedScene" uid="uid://ddkx0v5dpnxc0" path="res://coin.tscn" id="4_43qxt"]
[ext_resource type="Texture2D" uid="uid://bebg75uaox6ak" path="res://png/road/road_64px_a.png" id="5_bnivd"]
[ext_resource type="Texture2D" uid="uid://cibuj8tudorv4" path="res://png/road/road_64px_a_1.png" id="5_w5ghq"]
[ext_resource type="Script" path="res://Warning.gd" id="7_34wv7"]
[ext_resource type="Texture2D" uid="uid://cmq34np5x0yxg" path="res://png/scenery/scenery.png" id="7_38xsy"]
[ext_resource type="Script" path="res://Checkpoints.gd" id="7_kkgqu"]
[ext_resource type="Texture2D" uid="uid://dvyf83vag2fqu" path="res://png/scenery/scenery_2.png" id="8_dxklf"]
[ext_resource type="Script" path="res://Checkpoint.gd" id="8_k0jdm"]
[ext_resource type="Script" path="res://Mainspawnpoint.gd" id="8_lxdbg"]
[ext_resource type="Script" path="res://Platformthatmaymove.gd" id="11_cavgc"]
[ext_resource type="Script" path="res://Playereffigy.gd" id="11_o6wok"]
[ext_resource type="Script" path="res://Checkpointbutton.gd" id="12_ume5x"]
[ext_resource type="Texture2D" uid="uid://14w1mu04dj18" path="res://Arrow.png" id="13_cce0e"]
[ext_resource type="Script" path="res://Objectivearrow.gd" id="19_dm6jq"]
[ext_resource type="Script" path="res://Startbutton.gd" id="22_qpyf6"]
[ext_resource type="Texture2D" uid="uid://c0a26nmknmc44" path="res://png/car/car_24px_blue.png" id="24_7kypg"]
[ext_resource type="Texture2D" uid="uid://qwlojwkyqk0d" path="res://png/car/car_24px_pink.png" id="25_b54a6"]
[ext_resource type="Texture2D" uid="uid://yo5buwpf3u7" path="res://png/car/car_24px_green.png" id="26_nvo5k"]
[ext_resource type="Script" path="res://Objective1.gd" id="30_kuosg"]
[ext_resource type="Script" path="res://Objectives.gd" id="31_3tgoh"]
[ext_resource type="Script" path="res://Objectivelocation1.gd" id="32_a45v2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6575m"]
texture = ExtResource("3")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, -32, 32, -32)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, 32, 32, 32, -32, -32, -32)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, -32, -32, -32, 32, 32, 32)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, -32, 32, -32)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, 32, 32, 32, -32, -32, -32)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, -32, -32, -32, 32, 32, 32)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_rho0g"]
resource_name = "Coins"
scenes/1/scene = ExtResource("4_43qxt")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rtb38"]
texture = ExtResource("5_bnivd")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 0, 32, 0, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kvql6"]
texture = ExtResource("5_w5ghq")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="1"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_6575m")
sources/1 = SubResource("TileSetScenesCollectionSource_rho0g")
sources/2 = SubResource("TileSetAtlasSource_rtb38")
sources/3 = SubResource("TileSetAtlasSource_kvql6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mu0xk"]
texture = ExtResource("7_38xsy")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vo8tx"]
tile_size = Vector2i(48, 48)
sources/4 = SubResource("TileSetAtlasSource_mu0xk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_slo64"]
texture = ExtResource("8_dxklf")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_dbga2"]
tile_size = Vector2i(48, 48)
sources/1 = SubResource("TileSetAtlasSource_slo64")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5ksh"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ndcl8"]
size = Vector2(96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_firle"]
atlas = ExtResource("24_7kypg")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1tiw"]
atlas = ExtResource("24_7kypg")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_83v0d"]
atlas = ExtResource("24_7kypg")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp3v8"]
atlas = ExtResource("24_7kypg")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_olox7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_firle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1tiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83v0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp3v8")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_118uq"]
atlas = ExtResource("25_b54a6")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pi0p"]
atlas = ExtResource("25_b54a6")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn43p"]
atlas = ExtResource("25_b54a6")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5i1e"]
atlas = ExtResource("25_b54a6")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ipscj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_118uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pi0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn43p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5i1e")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8bcir"]
atlas = ExtResource("26_nvo5k")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkllw"]
atlas = ExtResource("26_nvo5k")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7ib2"]
atlas = ExtResource("26_nvo5k")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5cax"]
atlas = ExtResource("26_nvo5k")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_c7lra"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bcir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkllw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7ib2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5cax")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="Theme" id="Theme_12fav"]
Label/colors/font_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_u0hnr"]

[sub_resource type="Theme" id="Theme_xpqjm"]

[sub_resource type="Theme" id="Theme_jvb0c"]
default_font_size = 33
Label/font_sizes/font_size = 16

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3con"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3y4s"]
size = Vector2(96, 88)

[sub_resource type="GDScript" id="GDScript_3h5cy"]
script/source = "extends Node
var incheckpointselect
var carpositions = []
var checkpointcarpositions = []
var respawnposition = Vector2(0, 0)
var checkpointpos1
var checkpointpos2
var checkpointpos3
var gotoscene = false
var test = 1
signal cantthinkofgoodobscenitiesforthisname(transmission1, transmission2, transmission3)


# Called when the node enters the scene tree for the first time.
func _ready():
	if incheckpointselect:
		emit_signal(\"cantthinkofgoodobscenitiesforthisname\", checkpointpos1, checkpointpos2, checkpointpos3)


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_killbox_body_entered(body):
	for child in get_tree().get_nodes_in_group(\"Platform\"):
		if child.dropped:
			gotoscene = true
	if body == get_parent().get_node(\"Player\") and gotoscene:
		for child in get_tree().get_nodes_in_group(\"Platform\"):
			if checkpointpos1 == null:
				checkpointpos1 = child.global_position
			elif checkpointpos2 == null:
				checkpointpos1 = child.global_position
			elif checkpointpos3 == null:
				checkpointpos1 = child.global_position
		for child in get_parent().get_node(\"Movingplatforms\").get_children():
			carpositions.append(child)
			if child.checkpointhas != null:
				checkpointcarpositions.insert(child.checkpointhas.number, child)
		incheckpointselect = true
		print(incheckpointselect)
		gotoscene = false
		get_tree().change_scene_to_file(\"res://Selectacheckpoint.tscn\")
		print(incheckpointselect)
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_py82f"]
size = Vector2(64, 64)

[node name="Main" type="Node"]
script = ExtResource("1_62w1g")

[node name="Level" parent="." instance=ExtResource("2")]
tile_set = SubResource("1")
layer_0/tile_data = PackedInt32Array(2752511, 0, 0, 2555904, 0, 0, 2424832, 0, 0, 2293760, 0, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 131087, 983042, 0, 196623, 131074, 0, 262159, 131074, 0, 262160, 131074, 0, 327696, 131074, 0, 262161, 131074, 0, 196625, 131074, 0, 131089, 2, 0, 131088, 983042, 0, 196624, 131074, 0, 327695, 131074, 0, 327697, 131074, 0, 393231, 720898, 0, 393232, 720898, 0, 393233, 720898, 0, 458769, 720898, 0, 458768, 720898, 0, 458767, 720898, 0, 524303, 720898, 0, 524304, 720898, 0, 524305, 720898, 0, 393230, 65538, 0, 458766, 65538, 0, 524302, 65538, 0, 524301, 65538, 0, 458765, 65538, 0, 458764, 65538, 0, 393228, 65538, 0, 393229, 65538, 0, 458763, 65538, 0, 458762, 65538, 0, 458761, 65538, 0, 458760, 65538, 0, 458759, 65538, 0, 458758, 65538, 0, 458757, 65538, 0, 393221, 65538, 0, 393222, 65538, 0, 393223, 65538, 0, 393224, 65538, 0, 393227, 65538, 0, 393226, 65538, 0, 393225, 65538, 0, 524298, 65538, 0, 524299, 65538, 0, 524300, 65538, 0, 524297, 65538, 0, 524296, 65538, 0, 524295, 65538, 0, 524294, 65538, 0, 524293, 65538, 0, 524292, 65538, 0, 458756, 65538, 0, 393220, 65538, 0, 589839, 131074, 0, 655375, 131074, 0, 720911, 131074, 0, 786448, 131074, 0, 786449, 131074, 0, 720913, 131074, 0, 589841, 131074, 0, 655377, 131074, 0, 655376, 131074, 0, 720912, 131074, 0, 589840, 131074, 0, 786447, 131074, 0, 851983, 131074, 0, 917519, 131074, 0, 917520, 131074, 0, 983056, 131074, 0, 1048592, 131074, 0, 917521, 131074, 0, 851985, 131074, 0, 851984, 131074, 0, 983055, 131074, 0, 1048591, 131074, 0, 1048593, 131074, 0, 983057, 131074, 0, 524291, 65538, 0, 524290, 2, 0, 524289, 2, 0, 524288, 2, 0, 458755, 65538, 0, 458754, 2, 0, 458753, 2, 0, 458752, 2, 0, 393219, 65538, 0, 393218, 3, 0, 393217, 3, 0, 393216, 3, 0, 393234, 65538, 0, 393235, 65538, 0, 393236, 65538, 0, 393237, 65538, 0, 393238, 65538, 0, 393239, 65538, 0, 393240, 65538, 0, 393241, 65538, 0, 458778, 65538, 0, 458779, 65538, 0, 458780, 65538, 0, 393243, 65538, 0, 393242, 65538, 0, 393244, 65538, 0, 458777, 65538, 0, 458776, 65538, 0, 458775, 65538, 0, 458774, 65538, 0, 458773, 65538, 0, 458772, 65538, 0, 458771, 65538, 0, 458770, 65538, 0, 524306, 65538, 0, 524307, 65538, 0, 524308, 65538, 0, 524309, 65538, 0, 524310, 65538, 0, 524315, 65538, 0, 524314, 65538, 0, 524313, 65538, 0, 524312, 65538, 0, 524311, 65538, 0, 524316, 65538, 0, 1114127, 524290, 0, 1114128, 131074, 0, 1114129, 131074, 0, 1179663, 65538, 0, 1114126, 196610, 0, 1179662, 327682, 0, 1114123, 2, 0, 1114124, 2, 0, 1114125, 2, 0, 1179659, 327682, 0, 1179660, 327682, 0, 1179661, 327682, 0, 393245, 3, 0, 393246, 3, 0, 393247, 3, 0, 458783, 2, 0, 524319, 917506, 0, 524318, 917506, 0, 458782, 2, 0, 458781, 2, 0, 524317, 65538, 0, 1179665, 524290, 0, 1179664, 327682, 0)

[node name="Buildings" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_vo8tx")
cell_quadrant_size = 48
format = 2
layer_0/tile_data = PackedInt32Array(458757, 131076, 0, 131085, 4, 0, 7, 196612, 0)

[node name="Hospital" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_dbga2")
cell_quadrant_size = 48
format = 2
layer_0/tile_data = PackedInt32Array(131072, 1, 0)

[node name="Movingplatforms" type="Node" parent="."]

[node name="Platformthatmaymove" type="CharacterBody2D" parent="Movingplatforms" groups=["Moveplatform"]]
position = Vector2(991, 152)
script = ExtResource("11_cavgc")
destinations = [Vector2(991, 152), Vector2(991, 1118), Vector2(830, 1118), Vector2(991, 1118)]
delays = [10, 0, 10, 0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movingplatforms/Platformthatmaymove"]
shape = SubResource("RectangleShape2D_f5ksh")

[node name="Area2D" type="Area2D" parent="Movingplatforms/Platformthatmaymove"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movingplatforms/Platformthatmaymove/Area2D"]
shape = SubResource("RectangleShape2D_ndcl8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Movingplatforms/Platformthatmaymove"]
scale = Vector2(4.16667, 4.16667)
sprite_frames = SubResource("SpriteFrames_olox7")
frame = 3
frame_progress = 0.599682
offset = Vector2(0, 3)

[node name="Platformthatmaymove2" type="CharacterBody2D" parent="Movingplatforms" groups=["Moveplatform"]]
position = Vector2(1056, 160)
script = ExtResource("11_cavgc")
destinations = [Vector2(1056, 160), Vector2(1056, 544), Vector2(2016, 544), Vector2(1056, 544)]
delays = [5, 0, 5, 0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movingplatforms/Platformthatmaymove2"]
shape = SubResource("RectangleShape2D_f5ksh")

[node name="Area2D" type="Area2D" parent="Movingplatforms/Platformthatmaymove2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movingplatforms/Platformthatmaymove2/Area2D"]
shape = SubResource("RectangleShape2D_ndcl8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Movingplatforms/Platformthatmaymove2"]
position = Vector2(8, 0)
scale = Vector2(3.83333, 3.83333)
sprite_frames = SubResource("SpriteFrames_ipscj")
frame = 3
frame_progress = 0.646518
offset = Vector2(-3, 0)

[node name="Platformthatmaymove3" type="CharacterBody2D" parent="Movingplatforms" groups=["Moveplatform"]]
position = Vector2(1840, 472)
script = ExtResource("11_cavgc")
destinations = [Vector2(1804, 472), Vector2(232, 472)]
delays = [0, 0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movingplatforms/Platformthatmaymove3"]
shape = SubResource("RectangleShape2D_f5ksh")

[node name="Area2D" type="Area2D" parent="Movingplatforms/Platformthatmaymove3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movingplatforms/Platformthatmaymove3/Area2D"]
shape = SubResource("RectangleShape2D_ndcl8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Movingplatforms/Platformthatmaymove3"]
scale = Vector2(3.66667, 3.66667)
sprite_frames = SubResource("SpriteFrames_c7lra")
frame_progress = 0.827608

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control1" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_12fav")

[node name="Label" type="Label" parent="CanvasLayer/Control1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "-Hospital"

[node name="Control2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_top = 23.0
offset_right = 40.0
offset_bottom = 63.0
theme = SubResource("Theme_u0hnr")

[node name="Label" type="Label" parent="CanvasLayer/Control2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "-Gas station"

[node name="Control3" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_top = 46.0
offset_right = 40.0
offset_bottom = 46.0
theme = SubResource("Theme_xpqjm")

[node name="Label" type="Label" parent="CanvasLayer/Control3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "-Shop"

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(32, 40)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-577, -159)
offset = Vector2(570, 175)
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.25
drag_top_margin = 0.25
drag_right_margin = 0.25
drag_bottom_margin = 0.25

[node name="Warning" type="Label" parent="Player"]
visible = false
offset_left = -116.0
offset_top = -36.0
offset_right = 111.0
offset_bottom = -10.0
theme = SubResource("Theme_jvb0c")
text = "No checkpoints to teleport to"
script = ExtResource("7_34wv7")

[node name="Objectivearrowparent1" type="Node2D" parent="Player"]
script = ExtResource("19_dm6jq")

[node name="Objectivearrow" type="Sprite2D" parent="Player/Objectivearrowparent1"]
position = Vector2(28, -4)
texture = ExtResource("13_cce0e")

[node name="Objectivearrowparent2" type="Node2D" parent="Player"]
script = ExtResource("19_dm6jq")
number = 1

[node name="Objectivearrow" type="Sprite2D" parent="Player/Objectivearrowparent2"]
position = Vector2(28, -4)
texture = ExtResource("13_cce0e")

[node name="Objectivearrowparent3" type="Node2D" parent="Player"]
script = ExtResource("19_dm6jq")
number = 2

[node name="Objectivearrow" type="Sprite2D" parent="Player/Objectivearrowparent3"]
position = Vector2(28, -4)
texture = ExtResource("13_cce0e")

[node name="Mainspawnpoint" type="Node2D" parent="."]
position = Vector2(32, 40)
script = ExtResource("8_lxdbg")

[node name="Checkpoints" type="Node" parent="." node_paths=PackedStringArray("player", "worldspawn")]
script = ExtResource("7_kkgqu")
player = NodePath("../Player")
worldspawn = NodePath("../Mainspawnpoint")

[node name="Checkpoint1" type="Area2D" parent="Checkpoints" node_paths=PackedStringArray("player") groups=["1", "Platform"]]
script = ExtResource("8_k0jdm")
player = NodePath("../../Player")
number = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoints/Checkpoint1"]
shape = SubResource("RectangleShape2D_q3con")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Checkpoints/Checkpoint1"]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_i3y4s")

[node name="Checkpoint2" type="Area2D" parent="Checkpoints" node_paths=PackedStringArray("player") groups=["2", "Platform"]]
script = ExtResource("8_k0jdm")
player = NodePath("../../Player")
number = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoints/Checkpoint2"]
shape = SubResource("RectangleShape2D_q3con")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Checkpoints/Checkpoint2"]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_i3y4s")

[node name="Checkpoint3" type="Area2D" parent="Checkpoints" node_paths=PackedStringArray("player") groups=["3", "Platform"]]
script = ExtResource("8_k0jdm")
player = NodePath("../../Player")
number = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoints/Checkpoint3"]
shape = SubResource("RectangleShape2D_q3con")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Checkpoints/Checkpoint3"]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_i3y4s")

[node name="Varmanager" type="Node" parent="."]
script = SubResource("GDScript_3h5cy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2880, -1856)

[node name="Camera2D" type="Camera2D" parent="Sprite2D"]
position = Vector2(576, 324)
enabled = false

[node name="Playereffigy" type="Sprite2D" parent="Sprite2D" node_paths=PackedStringArray("player")]
position = Vector2(0, 8)
script = ExtResource("11_o6wok")
player = NodePath("../../Player")

[node name="Button" type="Button" parent="Sprite2D" node_paths=PackedStringArray("movingplatforms")]
offset_left = 384.0
offset_top = 268.0
offset_right = 448.0
offset_bottom = 332.0
script = ExtResource("12_ume5x")
movingplatforms = NodePath("../../Movingplatforms")
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="Sprite2D" node_paths=PackedStringArray("movingplatforms")]
offset_left = 256.0
offset_top = 268.0
offset_right = 320.0
offset_bottom = 332.0
script = ExtResource("12_ume5x")
number = 1
movingplatforms = NodePath("../../Movingplatforms")
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="Sprite2D" node_paths=PackedStringArray("movingplatforms")]
offset_left = 512.0
offset_top = 268.0
offset_right = 576.0
offset_bottom = 332.0
script = ExtResource("12_ume5x")
number = 2
movingplatforms = NodePath("../../Movingplatforms")
metadata/_edit_use_anchors_ = true

[node name="Startbutton" type="Button" parent="Sprite2D"]
offset_right = 8.0
offset_bottom = 8.0
text = "Game start"
script = ExtResource("22_qpyf6")

[node name="Objective1" type="Sprite2D" parent="Sprite2D"]
script = ExtResource("30_kuosg")

[node name="Objectives" type="Node" parent="."]
script = ExtResource("31_3tgoh")

[node name="Objectivelocation1" type="Area2D" parent="Objectives"]
position = Vector2(72, 424)
script = ExtResource("32_a45v2")
mynumber = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objectives/Objectivelocation1"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_py82f")

[node name="Objectivelocation2" type="Area2D" parent="Objectives"]
position = Vector2(792, 1100)
script = ExtResource("32_a45v2")
mynumber = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objectives/Objectivelocation2"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_py82f")

[node name="Objectivelocation3" type="Area2D" parent="Objectives"]
position = Vector2(1080, 128)
script = ExtResource("32_a45v2")
mynumber = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objectives/Objectivelocation3"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_py82f")

[connection signal="child_entered_tree" from="Level" to="." method="_on_level_child_entered_tree"]
[connection signal="bringuptext" from="Player" to="Player/Warning" method="_on_player_bringuptext"]
[connection signal="dropcpoint" from="Player" to="Checkpoints" method="_on_player_dropcpoint"]
[connection signal="undropcpoint" from="Player" to="Checkpoints" method="_on_player_undropcpoint"]
[connection signal="AAAAAAAAAAAAAAAAAAAAAAAA" from="Checkpoints" to="Sprite2D/Button" method="_on_checkpoints_aaaaaaaaaaaaaaaaaaaaaaaa"]
[connection signal="AAAAAAAAAAAAAAAAAAAAAAAA" from="Checkpoints" to="Sprite2D/Button2" method="_on_checkpoints_aaaaaaaaaaaaaaaaaaaaaaaa"]
[connection signal="AAAAAAAAAAAAAAAAAAAAAAAA" from="Checkpoints" to="Sprite2D/Button3" method="_on_checkpoints_aaaaaaaaaaaaaaaaaaaaaaaa"]
[connection signal="killplayer" from="Checkpoints" to="Player" method="_on_checkpoints_killplayer"]
[connection signal="body_entered" from="Checkpoints/Checkpoint1" to="Checkpoints/Checkpoint1" method="_on_body_entered"]
[connection signal="body_exited" from="Checkpoints/Checkpoint1" to="Checkpoints/Checkpoint1" method="_on_body_exited"]
[connection signal="body_entered" from="Checkpoints/Checkpoint2" to="Checkpoints/Checkpoint2" method="_on_body_entered"]
[connection signal="body_exited" from="Checkpoints/Checkpoint2" to="Checkpoints/Checkpoint2" method="_on_body_exited"]
[connection signal="body_entered" from="Checkpoints/Checkpoint3" to="Checkpoints/Checkpoint3" method="_on_body_entered"]
[connection signal="body_exited" from="Checkpoints/Checkpoint3" to="Checkpoints/Checkpoint3" method="_on_body_exited"]
[connection signal="pressed" from="Sprite2D/Startbutton" to="Sprite2D/Startbutton" method="_on_pressed"]
[connection signal="playerentered" from="Objectives/Objectivelocation1" to="Objectives" method="_on_objectivelocation_1_playerentered"]
[connection signal="playerentered" from="Objectives/Objectivelocation2" to="Objectives" method="_on_objectivelocation_2_playerentered"]
[connection signal="playerentered" from="Objectives/Objectivelocation3" to="Objectives" method="_on_objectivelocation_3_playerentered"]
